As parallel transactions currently fail, this is the update for the sequential `for` loop, so that transactions are executed sequentially.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/smasyutinLohika/aikon-deepspace-challenge#readme",
   "dependencies": {
-    "@apimarket/apimarket": "^0.7.9"
+    "@apimarket/apimarket": "^0.7.9",
+    "delay": "^3.0.0"
   }
 }
